[gd_scene load_steps=8 format=2]

[ext_resource path="res://icons/add.svg" type="Texture" id=1]
[ext_resource path="res://scripts/file_generator.gd" type="Script" id=2]
[ext_resource path="res://scripts/template_manager.gd" type="Script" id=3]
[ext_resource path="res://scripts/file_manager.gd" type="Script" id=4]
[ext_resource path="res://icons/remove.svg" type="Texture" id=5]
[ext_resource path="res://scripts/directory_selector.gd" type="Script" id=6]
[ext_resource path="res://scripts/constants_manager.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
constants = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Constants List/Constants")
directory_selection_dialog = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Directory Selector/FileDialog")
files_list = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files")
directory_selection = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Directory Selector")
generation_name_list = NodePath("ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/GenerationNames")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer"]
margin_right = 984.0
margin_bottom = 670.0
size_flags_horizontal = 3
custom_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer"]
margin_right = 974.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="Templates" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 974.0
margin_bottom = 20.0
script = ExtResource( 3 )
constants = NodePath("../Constants List/Constants")
files = NodePath("../HBoxContainer2/Files")
files_generator = NodePath("../../../..")

[node name="SaveTemplate" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates"]
margin_right = 125.0
margin_bottom = 20.0
text = "Save As Template"

[node name="LoadTemplate" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates"]
margin_left = 129.0
margin_right = 235.0
margin_bottom = 20.0
text = "Load Template"

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 974.0
margin_bottom = 38.0
text = "Directory"

[node name="Directory Selector" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 974.0
margin_bottom = 66.0
script = ExtResource( 6 )

[node name="DirectoryPath" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector"]
margin_right = 860.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector"]
margin_left = 864.0
margin_right = 974.0
margin_bottom = 24.0
text = "Open Directory"

[node name="FileDialog" type="FileDialog" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector"]
margin_left = 78.0
margin_right = 434.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 500 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/Users/marcu/Documents/Github/Minecraft-Batch-File-Generator"
current_path = "/Users/marcu/Documents/Github/Minecraft-Batch-File-Generator/"

[node name="-- Constants --" type="Node" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]

[node name="Constants Title" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 974.0
margin_bottom = 90.0

[node name="Constants Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants Title"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Constants"

[node name="Constants Help Popup" type="AcceptDialog" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants Title"]
margin_left = 67.0
margin_right = 212.0
margin_bottom = 211.0
window_title = "Constants Help"
dialog_text = "Constants can be used in file templates. Use them with *NAME* where NAME is the name of the constant. Constants can also reference other constants as long as the referenced constants are above in the list."
dialog_autowrap = true

[node name="Open Help" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants Title"]
margin_left = 67.0
margin_right = 85.0
margin_bottom = 20.0
text = "?"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 974.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add Constant" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 22.0
text = "Add New Constant"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Constants List" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 974.0
margin_bottom = 166.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List"]
margin_right = 974.0
margin_bottom = 14.0

[node name="ConstantName" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/HBoxContainer"]
margin_right = 218.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.29
text = "Name"

[node name="ConstantValue" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/HBoxContainer"]
margin_left = 222.0
margin_right = 974.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Value"

[node name="Hardcoded Input" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List"]
margin_top = 18.0
margin_right = 974.0
margin_bottom = 42.0

[node name="HardcodedName" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/Hardcoded Input"]
margin_right = 216.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "input"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HardcodedValue" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/Hardcoded Input"]
margin_left = 220.0
margin_right = 942.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "(Special constant which contains the name used when creating the file)"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HardcodedRemove" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/Hardcoded Input"]
margin_left = 946.0
margin_right = 974.0
margin_bottom = 22.0
size_flags_vertical = 0
disabled = true
icon = ExtResource( 5 )

[node name="Constants" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List"]
margin_top = 46.0
margin_right = 974.0
margin_bottom = 46.0
script = ExtResource( 7 )
constants_help_popup = NodePath("../../Constants Title/Constants Help Popup")

[node name="-- Files --" type="Node" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 974.0
margin_bottom = 204.0
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 974.0
margin_bottom = 34.0
text = "Files"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 974.0
margin_bottom = 230.0

[node name="AddFile" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 1 )

[node name="RemoveFile" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 974.0
margin_bottom = 544.0

[node name="Files" type="ItemList" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 223.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
allow_reselect = true
script = ExtResource( 4 )
current_file = NodePath("../MarginContainer/FileSettings")

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 227.0
margin_right = 974.0
margin_bottom = 310.0
size_flags_horizontal = 3
custom_constants/margin_left = 20

[node name="FileSettings" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
margin_left = 20.0
margin_right = 747.0
margin_bottom = 310.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_right = 727.0
margin_bottom = 14.0
text = "List Name"

[node name="CurrentFileName" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_top = 18.0
margin_right = 727.0
margin_bottom = 42.0
editable = false

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_top = 46.0
margin_right = 727.0
margin_bottom = 60.0
text = "File Path/Name (relative to directory)"

[node name="CurrentFilePath" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_top = 64.0
margin_right = 727.0
margin_bottom = 88.0
editable = false

[node name="Label2" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_top = 92.0
margin_right = 727.0
margin_bottom = 106.0
text = "File Template"

[node name="CurrentFileTemplate" type="TextEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings"]
margin_top = 110.0
margin_right = 727.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 200 )
readonly = true
show_line_numbers = true
wrap_enabled = true

[node name="-- Generate --" type="Node" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]

[node name="MarginContainer2" type="MarginContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 548.0
margin_right = 974.0
margin_bottom = 670.0
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 20.0
margin_right = 974.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 974.0
margin_bottom = 14.0
text = "Names To Generate With (whitespace seperated)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerationNames" type="TextEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 974.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 60 )
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 82.0
margin_right = 974.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateButton" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer"]
margin_left = 434.0
margin_right = 539.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Generate Files"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates/SaveTemplate" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates" method="save_template"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates/LoadTemplate" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Templates" method="load_template"]
[connection signal="focus_exited" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector/DirectoryPath" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector" method="validate_directory"]
[connection signal="text_entered" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector/DirectoryPath" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector" method="validate_directory"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector/Button" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector" method="open_directory_selection"]
[connection signal="dir_selected" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector/FileDialog" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Directory Selector" method="select_directory"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants Title/Open Help" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/Constants" method="open_constants_help_popup"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/Add Constant" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/Constants List/Constants" method="add_contant_input"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/AddFile" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="add_new_file"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/RemoveFile" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="remove_current_file"]
[connection signal="item_selected" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="select_file"]
[connection signal="focus_exited" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings/CurrentFileName" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="validate_file_name"]
[connection signal="text_changed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings/CurrentFileName" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="edit_file_name"]
[connection signal="text_changed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings/CurrentFilePath" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="edit_file_path"]
[connection signal="text_changed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/FileSettings/CurrentFileTemplate" to="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/Files" method="edit_file_template"]
[connection signal="button_down" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer/GenerateButton" to="Panel" method="generate_files"]
